--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-
-# Service account key file
+# Firebase service account key
+# This file contains sensitive credentials and must not be committed.
 src/config/serviceAccountKey.json
+
+# Standard Node.js ignores
+node_modules/
+dist/
+.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
